...
    android:layout_height="match_parent"
    tools:context=".fragments.adminFragments.ChangeUserRoleFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/user_role_searchbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
...
        android:src="@drawable/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <ListView
        android:id="@+id/user_role_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
