<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".fragments.ChatFragment">

    <include
        android:id="@+id/chat_posts_buttons"
        layout="@layout/chat_posts_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/chat_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_posts_buttons"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/chat_message_edit_background"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/chat_message_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            android:fadeScrollbars="false"
            android:hint="@string/chat_message"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:scrollbars="vertical" />

        <ImageButton
            android:id="@+id/chat_send_button"
            style="@android:style/Widget.ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0.15"
            android:scaleType="fitCenter"
            android:src="@drawable/send_message"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:contentDescription="TODO" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>